# flummi

./: .gitignore  README.md  benchmark.py  diff.ppm  interpreterTest.ppm  oneFlummiTest.ppm  out.batched.sql  out.sql  pyproject.toml  requirements.txt  test.py
examples/: .gitignore  add.fl  binom.fl  comps-memo.fl  comps.fl  dtw-memo.fl  dtw.fl  eval-memo.fl  eval.fl  fac.fl  fib.fl  floyd-memo.fl  floyd.fl  fsm.fl  giftwrap.fl  late.fl  march.fl  math.fl  mul.fl  mul.sql  oil.fl  packing.fl  range.fl  range.sql  ray.fl  ray.sql  ray_setup.sql  ship.fl  test.fl  vm.fl
examples/bfs/: input.fl  output.sql  setup.sql
examples/coin-flip/: fan.sql  input.fl  merge.sql  mixed.sql  output.sql  profile.fan.json  profile.merge.json  profile.mixed.json
examples/community-detection/: input.fl  output.sql  setup.sql  using-key.sql
examples/connected-components/: input.fl  output.sql  setup.sql  using-key.sql
examples/counter/: input.fl  output.sql
examples/dummy/: final.flir  input.fl  input.proc  output.sql  udf.sql
examples/generations/: input.fl  output.sql
examples/jarvis/: input.fl  output.sql  setup.sql
examples/k-core/: input.fl  output.sql  setup.sql  using-key.sql
examples/k-means/: input.fl  output.sql  setup.sql  visualize.py
examples/life/: input.fl  output.sql
examples/packing/: apfel.sql  input.fl  input.proc  output.sql  setup.sql
examples/paths/: crafted.sql  input.fl  output.sql  setup.sql
examples/quickhull/: input.fl  output.sql  setup.sql
examples/ray/: .gitignore  default.sql  input.default.fl  input.fl  input.struct-less.fl  input.struct-less.max-fork.fl  (+10 more)
flummi/: CFG.py  __main__.py  algorithms.py  analyzer.py  cli.py  codegen.py  data_flow.py  enrichment.py  errors.py  grammar.py  interpeter.py  label_graph.py  lowering.py  optimizer.py  parser.py  pretty.py  render.py  sql.py  utils.py
(+189 files in other folders)
