[project]
name = "flummi"
version = "0.1.0"
description = "The Flummi Compile Prototype."
readme = "README.md"
authors = [{ email = "tim.fischer@uni-tuebingen.de" }]
requires-python = ">=3.14"
dependencies = ["typer>=0.19.2"]

[project.scripts]
flummi = "flummi:cli"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ruff>=0.15.4", "ty>=0.0.20"]

[tool.ruff]
line-length = 80
