[project]
name = "flummi"
version = "0.1.0"
description = "The Flummi Compiler Prototype."
readme = "README.md"
authors = [{ name = "Tim Fischer", email = "tim.fischer@uni-tuebingen.de" }]
requires-python = ">=3.14"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

[project.optional-dependencies]
cli = ["typer>=0.19.2"]

[project.scripts]
flummi = "flummi.cli:cli"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ruff>=0.15.4", "ty>=0.0.20"]

[tool.ruff]
line-length = 80
