[project]
name = "flummi"
version = "0.2.7"
description = "A to-SQL Compiler Prototype."
readme = "README.md"
authors = [{ name = "Tim Fischer", email = "tim.fischer@uni-tuebingen.de" }]
requires-python = ">=3.14"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

[project.urls]
Project = "https://db.cs.uni-tuebingen.de/research/current-projects/plsql/"
GitHub = "https://github.com/DBatUTuebingen/flummi"

[project.optional-dependencies]
cli = ["typer>=0.19.2"]
typed = ["duckdb>=1.5.5"]

[project.scripts]
flummi = "flummi.cli:cli"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ruff>=0.15.4", "ty>=0.0.20"]

[tool.ruff]
line-length = 80
